@@ -425,13 +425,14 @@ class CHARACTER
   virtual bool CanBeAssignedAName() const { return false; }
  protected:
 
-  virtual vector2d GetHeadBitmapPos() const { return vector2d(96, 16); } 
-  virtual vector2d GetTorsoBitmapPos() const { return vector2d(48, 112); }
-  virtual vector2d GetArmBitmapPos() const { return vector2d(64, 32); }
-  virtual vector2d GetLegBitmapPos() const { return vector2d(16, 80); }
+  virtual vector2d GetHeadBitmapPos() const { return vector2d(96, 32); } 
+  virtual vector2d GetTorsoBitmapPos() const { return vector2d(48, 160); }
+  virtual vector2d GetArmBitmapPos() const { return vector2d(80, 160); }
+  virtual vector2d GetLegBitmapPos() const { return vector2d(16, 144); }
 
-  virtual ushort ClothColor() const { return MAKE_RGB(64, 64, 160); }
+  virtual ushort ClothColor() const { return MAKE_RGB(30, 30, 30); }
   virtual ushort SkinColor() const { return MAKE_RGB(160, 0, 0); }
+  virtual ushort EyeColor() const { return MAKE_RGB(64, 0, 0); }
 
   virtual ulong TotalVolume() const { return 110000; }
   virtual material* CreateTorsoFlesh(ulong Volume) const { return new daemonflesh(Volume); }
@@ -464,11 +465,10 @@ class CHARACTER
   virtual vector2d GetArmBitmapPos() const { return vector2d(64, 16); }
   virtual vector2d GetLegBitmapPos() const { return vector2d(0, 64); }
 
-  virtual ushort TorsoMainColor() const { return MAKE_RGB(0, 0, 80); }
-  virtual ushort ArmMainColor() const { return MAKE_RGB(0, 0, 80); }
-  virtual ushort LegMainColor() const { return MAKE_RGB(0, 0, 80); }
+
   //  virtual ushort HairColor() const { return MAKE_RGB(60, 48, 24); }
   // virtual ushort SkinColor() const { return MAKE_RGB(160, 0, 0); }
+  virtual ushort ClothColor() const { return MAKE_RGB(0,0,64); }
   virtual ushort EyeColor() const { return MAKE_RGB(100, 0, 0); }
 
   virtual ulong TotalVolume() const { return 110000; }
@@ -1401,11 +1401,11 @@ class CHARACTER
   virtual bool CanBeGenerated() const { return true; }
   virtual void CreateInitialEquipment();
  protected:
-  virtual ushort SkinColor() const { MAKE_RGB(50, 120, 120); }
+  virtual ushort SkinColor() const { MAKE_RGB(40, 140, 150); }
   virtual ushort HairColor() const { return MAKE_RGB(35, 35, 35); }
   virtual ushort ClothColor() const { return MAKE_RGB(111, 74, 37); }
   virtual vector2d GetHeadBitmapPos() const { return vector2d(112, 208); }
-  virtual vector2d GetTorsoBitmapPos() const { return vector2d(32, 16); }
+  virtual vector2d GetTorsoBitmapPos() const { return vector2d(48, 176); }
   virtual vector2d GetArmBitmapPos() const { return vector2d(64, 176); }
   virtual vector2d GetLegBitmapPos() const { return vector2d(16, 112); }
 
